--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
